fixed text overflow error

--- a/style.css
+++ b/style.css
@@ -22,13 +22,14 @@ body {
     text-transform: lowercase;
     border-radius: 10px;
     margin-bottom: 20px;
+    max-width: 100%;
    
 }
 
 
 .card-text {
     background-color: #3498DB;
-    text-align: left;
+    text-align: center;
     font-size: small;
     line-height: .25px;
     padding-left: 20px;
@@ -51,7 +52,7 @@ body {
     font-weight: bold;
     font-size: large;
     text-decoration: underline; 
-    text-align: left;
+    text-align: center;
     line-height: 20px;
     padding: 20px 20px 0px 20px;
     
